<resources>
    <string name="app_name">Errandz</string>
    <string name="api_key">AIzaSyBh4D2pzrsqeOUo2F8QMPEuJri6zOYyXB0</string>
    <string name="see_more"><u>See More</u></string>
    <string name="set_location_manually"><u>Set Location Manually</u></string>
    <string name="get_direction"><u>Get Direction</u></string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_type">Profile Type</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="hirer">Hirer</string>
    <string name="get_started">Get Started</string>
    <string name="verify_emailid">Verify EmailID</string>
    <string name="or_label">OR</string>

    <string name="empty_first_name">Enter First Name</string>
    <string name="first_name_invalid">First Name is Invalid!</string>
    <string name="empty_last_name">Enter Last Name</string>
    <string name="last_name_invalid">Last Name is Invalid!</string>
    <string name="empty_email">Enter Email ID</string>
    <string name="email_invalid">Email ID is invalid.</string>
    <string name="empty_password">Please enter password</string>
    <string name="password_min_length">Password should be between 6 and 15 characters.</string>
    <string name="password_confirm_password_not_matched">Passwords are not matching.</string>
    <string name="birth_date_empty">Please enter date of birth.</string>
    <string name="invalid_age">Your age should be more than 14</string>
    <string name="sign_up_with_google">Sign In With Google</string>
    <string name="server_client_id">1010850856287-spvhvmsum2r42cvemel6iu28gv59iqk2.apps.googleusercontent.com</string>
    <string name="welcome_header">Welcome to Errandz!</string>
    <string name="app_slogan">Turning odd jobs into oppurtunities</string>

    <string name="take_picture">Take Picture</string>
    <string name="gallery">Gallery</string>
    <string name="cant_load_image">Could not load images. Permission Denied!</string>
</resources>