<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@android:color/white"
                app:title="Add more information"
                app:titleTextColor="@color/colorPrimaryDark" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birth_date_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/date_of_birth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birth_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_profile_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profile_type"
            app:layout_constraintEnd_toStartOf="@+id/profile_radio_group"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/birth_date_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_text_input_layout" />

        <RadioGroup
            android:id="@+id/profile_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/label_profile_type"
            app:layout_constraintEnd_toEndOf="@+id/birth_date_text_input_layout"
            app:layout_constraintStart_toEndOf="@+id/label_profile_type"
            app:layout_constraintTop_toTopOf="@+id/label_profile_type">

            <RadioButton
                android:id="@+id/job_seeker_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_seeker" />

            <RadioButton
                android:id="@+id/hiring_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/hirer" />
        </RadioGroup>

        <Button
            android:id="@+id/get_started_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/get_started"
            app:layout_constraintEnd_toEndOf="@+id/birth_date_text_input_layout"
            app:layout_constraintStart_toStartOf="@+id/birth_date_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/label_profile_type" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>