<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.signup.SignUpFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f5f5f5">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/toolbar_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/sign_up_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:background="@android:color/white"
                        app:navigationIcon="?attr/homeAsUpIndicator"
                        app:title="@string/sign_up"
                        app:titleTextColor="@color/colorPrimaryDark" />
                </com.google.android.material.appbar.AppBarLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/first_name"
                    app:layout_constraintBottom_toTopOf="@+id/last_name_text_input_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_container"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapSentences"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/last_name"
                    app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email_id"
                    app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    app:layout_constraintBottom_toTopOf="@+id/confirm_password_text_input_layout"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="15" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/confirm_password"
                    app:layout_constraintBottom_toTopOf="@+id/birth_date_text_input_layout"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="15" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birth_date_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/date_of_birth"
                    app:layout_constraintBottom_toTopOf="@+id/label_profile_type"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birth_date_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/label_profile_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/profile_type"
                    app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                    app:layout_constraintEnd_toStartOf="@+id/profile_radio_group"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="@+id/birth_date_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/birth_date_text_input_layout" />

                <RadioGroup
                    android:id="@+id/profile_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/label_profile_type"
                    app:layout_constraintEnd_toEndOf="@+id/birth_date_text_input_layout"
                    app:layout_constraintStart_toEndOf="@+id/label_profile_type"
                    app:layout_constraintTop_toTopOf="@+id/label_profile_type">

                    <RadioButton
                        android:id="@+id/job_seeker_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/job_seeker" />

                    <RadioButton
                        android:id="@+id/hiring_radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/hirer" />
                </RadioGroup>

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/get_started"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"
                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@+id/label_profile_type" />

                <!--                <TextView-->
                <!--                    android:id="@+id/or_label"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:text="@string/or_label"-->
                <!--                    app:layout_constraintBottom_toTopOf="@+id/google_sign_up_button"-->
                <!--                    app:layout_constraintEnd_toEndOf="@+id/first_name_text_input_layout"-->
                <!--                    app:layout_constraintStart_toStartOf="@+id/first_name_text_input_layout"-->
                <!--                    app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />-->




            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/progress_bar_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3b000000"
            android:clickable="true"
            android:elevation="15dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary" />

        </FrameLayout>
    </FrameLayout>
</layout>