<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f5f5f5">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.1"
                android:background="@drawable/ic_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:text="@string/welcome_header"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="27sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/app_slogan_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/app_slogan_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_slogan"
                android:textColor="#707070"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
                app:layout_constraintEnd_toEndOf="@+id/welcome_header"
                app:layout_constraintStart_toStartOf="@+id/welcome_header"
                app:layout_constraintTop_toBottomOf="@+id/welcome_header" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="35dp"
                android:hint="@string/email_id"
                app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_slogan_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:layout_constraintBottom_toTopOf="@id/label_forgot_password"
                app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
                app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Forgot Password?"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#0F9763"
                android:text="Sign In"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/label_or"
                app:layout_constraintEnd_toEndOf="@+id/password_text_input_layout"
                app:layout_constraintStart_toStartOf="@+id/password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/label_forgot_password">

            </Button>

            <TextView
                android:id="@+id/label_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Or"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintBottom_toTopOf="@+id/google_login_button"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/google_login_button"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/google_button_background"
                android:clickable="true"
                android:elevation="1dp"
                android:foreground="?selectableItemBackground"
                app:layout_constraintStart_toStartOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="@+id/login_button"
                app:layout_constraintTop_toBottomOf="@+id/label_or"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_link">

                <ImageView
                    android:id="@+id/google_image_view"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_google_icon" />

                <TextView
                    android:id="@+id/google_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_with_google"
                    android:textColor="#707070"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/sign_up_link"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Sign Up"
                app:layout_constraintStart_toStartOf="@+id/google_login_button"
                app:layout_constraintEnd_toEndOf="@id/google_login_button"
                app:layout_constraintTop_toBottomOf="@+id/google_login_button"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <include
                layout="@layout/progress_bar_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/progress_bar_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#3b000000"
                android:clickable="true"
                android:elevation="15dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimary" />

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>